--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,4 +1,4 @@
-name: Notify Discord on Merge to Master
+name: Advanced Discord Notifications
 
 on:
   push:
@@ -13,9 +13,31 @@ jobs:
       - name: Send Notification to Discord
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          REPO_URL: ${{ github.server_url }}/${{ github.repository }}
         run: |
           curl -H "Content-Type: application/json" \
             -d '{
-                  "content": "🚀 Code has been merged into **master** branch!"
+                  "embeds": [
+                    {
+                      "title": "🚀 Code Merged into Master",
+                      "description": "A new push has been made to the master branch.",
+                      "color": 65280,
+                      "fields": [
+                        {
+                          "name": "Repository",
+                          "value": "[${{ github.repository }}](${REPO_URL})"
+                        },
+                        {
+                          "name": "Commit",
+                          "value": "[${{ github.sha }}](${REPO_URL}/commit/${{ github.sha }})"
+                        },
+                        {
+                          "name": "Pusher",
+                          "value": "${{ github.actor }}"
+                        }
+                      ],
+                      "timestamp": "${{ github.event.head_commit.timestamp }}"
+                    }
+                  ]
                 }' \
             $DISCORD_WEBHOOK_URL
